--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@remix-run/react": "2.1.0",
     "@shopify/cli": "3.50.0",
-    "@shopify/cli-hydrogen": "^6.0.0",
+    "@shopify/cli-hydrogen": "^0.0.0-next-94509b7-20240105223134",
     "@shopify/hydrogen": "^2023.10.0",
     "@shopify/remix-oxygen": "^2.0.0",
     "graphql": "^16.6.0",
