--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DemoProdStore",
+  "name": "demoprodstore",
   "private": true,
   "sideEffects": false,
   "version": "1.0.0",
@@ -8,7 +8,10 @@
     "dev": "shopify hydrogen dev --codegen",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
-    "codegen": "shopify hydrogen codegen"
+    "codegen": "shopify hydrogen codegen",
+    "e2e-test-dependencies": "playwright install --with-deps",
+    "deploy-with-e2e": "shopify hydrogen deploy --auth-bypass-token",
+    "e2e-test": "playwright test"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
