--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DemoProdStore",
+  "name": "demoprodstore",
   "private": true,
   "sideEffects": false,
   "version": "1.0.0",
@@ -8,13 +8,16 @@
     "dev": "shopify hydrogen dev --codegen",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
-    "codegen": "shopify hydrogen codegen"
+    "codegen": "shopify hydrogen codegen",
+    "e2e-test-dependencies": "playwright install --with-deps",
+    "deploy-with-e2e": "shopify hydrogen deploy --auth-bypass-token",
+    "e2e-test": "playwright test"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@remix-run/react": "2.1.0",
     "@shopify/cli": "3.50.0",
-    "@shopify/cli-hydrogen": "^6.0.0",
+    "@shopify/cli-hydrogen": "^0.0.0-next-94509b7-20240105223134",
     "@shopify/hydrogen": "^2023.10.0",
     "@shopify/remix-oxygen": "^2.0.0",
     "graphql": "^16.6.0",
