typo in action.yml environment variables

--- a/.github/actions/end-to-end-test/action.yml
+++ b/.github/actions/end-to-end-test/action.yml
@@ -57,10 +57,7 @@ runs:
 
     - name: 🍄 Run Playwright tests
       shell: 'bash'
-      run: |
-        export AUTH_BYPASS_TOKEN=${{ inputs.auth-bypass-token }}
-        export DEPLOYMENT_URL=${{ inputs.url }}
-        npx playwright test
+      run: URL=${{ inputs.url }} AUTH_BYPASS_TOKEN=${{ inputs.auth-bypass-token }} npx playwright test
 
     - name: 🗒 Report
       uses: actions/upload-artifact@v3
