--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demoprodstore",
+  "name": "demo-prod-store",
   "private": true,
   "sideEffects": false,
   "version": "1.0.0",
@@ -15,11 +15,12 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@remix-run/react": "2.1.0",
-    "@shopify/cli": "3.50.0",
-    "@shopify/cli-hydrogen": "^0.0.0-next-94509b7-20240105223134",
-    "@shopify/hydrogen": "^2023.10.0",
-    "@shopify/remix-oxygen": "^2.0.0",
+    "@remix-run/react": "^2.6.0",
+    "@remix-run/server-runtime": "^2.6.0",
+    "@shopify/cli": "3.52.0",
+    "@shopify/cli-hydrogen": "^7.0.1",
+    "@shopify/hydrogen": "~2024.1.1",
+    "@shopify/remix-oxygen": "^2.0.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.6",
@@ -28,13 +29,12 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@remix-run/dev": "2.1.0",
-    "@remix-run/eslint-config": "2.1.0",
-    "@shopify/oxygen-workers-types": "^3.17.3",
+    "@remix-run/dev": "^2.6.0",
+    "@remix-run/eslint-config": "^2.6.0",
+    "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/eslint": "^8.4.10",
-    "@types/node": "^20.10.4",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.20.0",
@@ -43,6 +43,6 @@
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=16.13"
+    "node": ">=18.0.0"
   }
 }
