--- a/.github/actions/end-to-end-tests/action.yml
+++ b/.github/actions/end-to-end-tests/action.yml
@@ -48,12 +48,12 @@ runs:
     - name: 💽 Install Playwright Browsers (all)
       shell: 'bash'
       if: steps.playwright-cache.outputs.cache-hit != 'true'
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps chromium
 
     - name: 💽 Install Playwright (only system deps)
       shell: 'bash'
       if: steps.playwright-cache.outputs.cache-hit == 'true'
-      run: npx playwright install-deps
+      run: npx playwright install-deps chromium
 
     - name: 🍄 Run Playwright tests
       shell: 'bash'
